@@ -100,6 +100,8 @@ OPTIONS
 --clean-pycentral	generate maintainer script that will remove byte code
   generated by python-central helper
 
+--ignore-shebangs	do not translate shebangs into Debian dependencies
+
 SEE ALSO
 ========
 * /usr/share/doc/python/python-policy.txt.gz
